src/Pages/Chat/chat.scss
.page_chat {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;

  section {
    display: flex;
    background-color: #222226;
    color: rgba(255, 255, 255, 0.9);
    height: 85vh;
    width: 65vw;
    flex-direction: row;

    .users_block {
      box-shadow: -5px 5px 5px rgb(29, 29, 29);
      margin-right: 1rem;
      border-radius: 0.5rem;
      width: 25%;
      background: linear-gradient(225deg, #444446 30%, #333336 90%);
      border-radius: 0.5rem;

      .users_header {
        padding: 0.5rem 1rem;
        font-size: calc(1.5vw);
      }

      .users_line {
        margin: 0 1rem;
        color: black;
      }

      .users_list {
        overflow-y: auto;
        display: flex;
        flex-direction: column;
        padding: 1rem 1rem;
        color: white;

        .users_user {
          border: 0.1rem solid rgba(27, 27, 27, 0.1);
          border-radius: 0.5rem;
          padding: 0.4rem;
          margin: 0.4rem 0;
          box-shadow: -0.1rem 0.1rem 0.1rem black;
          font-family: sans-serif;
          list-style-type: none; 
        }
      }
    }

    .chat_block {
      display: flex;
      flex-direction: column;
      font-family: "Roboto";
      background-color: #333336;
      width: 100%;
      border-radius: 0.5rem;
      box-shadow: -0.05rem 0.05rem 0.05rem rgba(0, 0, 0, 0.5);

      .chat_messages_list {
        display: flex;
        flex-direction: column;
        height: 93%;
        overflow-y: auto;
        overflow-x: hidden;

        .chat_message_obj {
          margin: 0.8rem 1rem 0 1rem;
          display: flex;
          flex-direction: column;

          .chat_message {
            background: linear-gradient(225deg, #2196f3 30%, #009ec2 90%);
            box-shadow: -0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.75);
            padding: 0.5rem;
            border-radius: 0.5rem;
            width: fit-content;
            max-width: 40vw;
            overflow-wrap: break-word;
          }

          .chat_message_userName {
            font-size: 0.8rem;
            color: rgba(255, 255, 255, 0.8);
          }
        }
      }

      .message_send_block {
        box-shadow: -5px 5px 5px rgb(29, 29, 29);
        width: 100%;
        height: 7%;
        background-color: #444446;
        border-radius: 0.5rem;

        .message_send {
          padding: 0.5rem;
          display: flex;
          flex-direction: row;

          .message_send_text {
            border: 0.1rem solid rgba(255, 255, 255, 0.5);
            background-color: transparent;
            color: white;

            &::placeholder {
              color: rgba(255, 255, 255, 0.8);
            }

            &:focus {
              box-shadow: none;
              border: 0.1rem solid rgba(255, 255, 255, 0.5);
            }
          }

          .message_send_btn {
            margin-left: 0.5rem;
            background-color: lightgray;
            border-radius: 5rem;
          }
        }
      }
    }
  }
}

#scroll::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  background-color: #f5f5f5;
}

#scroll::-webkit-scrollbar {
  width: 12px;
  background-color: transparent;
}

#scroll::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: rgb(205, 215, 219);
  background: linear-gradient(rgb(203, 205, 209), rgb(155, 159, 163));
}

#scroll {
  cursor: auto !important;
}

